utility-service/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                  - name: local_service
                    domains: [ "*" ]
                    routes:
                    - match:
                        prefix: "/utility"
                      route:
                        cluster: utility_service
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: utility_service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: utility_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: utility-service
                      port_value: 5000
